fixed tag center align

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -199,6 +199,7 @@ ul{
 }
 .tag{
   margin: 20px auto;
+  text-align: center;
 }
 .project{
   background-color:white;
